[workspace]

[package]
name = "sdfer"
description = "SDF (Signed Distance Field) generation algorithms"
repository = "https://github.com/LykenSol/sdfer"
homepage = "https://github.com/LykenSol/sdfer"
documentation = "https://docs.rs/sdfer"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
image = { version = "0.24.7", optional = true }
